--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^11.2.10",
     "gsap": "^3.12.5",
     "jquery": "^3.7.1",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
     "react-parallax": "^3.5.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "react-spring": "^9.7.3",
+    "react-transition-group": "^4.4.5",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
