--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^11.2.10",
     "gsap": "^3.12.5",
+    "intersection-observer": "^0.12.2",
     "jquery": "^3.7.1",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
