--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-modal": "^3.16.1",
     "react-parallax": "^3.5.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
     "react-spring": "^9.7.3",
     "react-transition-group": "^4.4.5",
